@@ -1,4 +1,7 @@
-2008-03-07  Andreas K. Foerster  <info@akfoerster.de>
+2008-03-08  Andreas K. Foerster  <info@akfoerster.de>
+
+	* avatarsay.c (get_user_shell):
+	first search for the environment variable SHELL
 
 	* avtfilechooser.c:
 	new file
